--- a/Project/index.html
+++ b/Project/index.html
@@ -37,7 +37,8 @@
 					<textarea id="scrambInput" placeholder="Scramble:" rows="1" value = ""></textarea>
 					<textarea id="moveInput" placeholder="Moves:" rows="4" value = ""></textarea>
 					
-					<button id="invertSelection">Invert Selected</button>
+					<br>
+					<button id="invertSelection">Invert Selected Moves</button>
 						<!--
 						Init: <input id="init" placeholder="Init." type="text" value = ""/>
 						<br>
