--- a/Project/index.html
+++ b/Project/index.html
@@ -3,6 +3,12 @@
 
 <title>FMC</title>
 
+<!--
+Hi there! If you're reading this, there is a good chance you have some experience with web design.
+I need someone who knows what they are doing to help me with this project.
+If you think you could help with this, please email me at niczippy77@gmail.com
+-->
+
 <link href="demo/style.css" rel="stylesheet" media="screen" type="text/css" />
 
 <script type="text/javascript" src="lib/jquery-1.11.0.min.js"></script>
