--- a/Project/index.html
+++ b/Project/index.html
@@ -42,7 +42,8 @@ If you think you could help with this, please email me at niczippy77@gmail.com
             
 					<textarea id="scrambInput" placeholder="Scramble:" rows="1" value = ""></textarea>
 					<textarea id="moveInput" placeholder="Moves:" rows="4" value = ""></textarea>
-					
+					<textarea id="skeleInput" placeholder="Skeleton:" rows="4" value = ""></textarea>
+
 					<br>
 					<button id="invertSelection">Invert Selected Moves</button>
 						<!--
