--- a/Project/index.html
+++ b/Project/index.html
@@ -40,9 +40,10 @@ If you think you could help with this, please email me at niczippy77@gmail.com
 				<div class="padded center">
 					<p class="spacey">
             
-					<textarea id="scrambInput" placeholder="Scramble:" rows="1" value = ""></textarea>
-					<textarea id="moveInput" placeholder="Moves:" rows="4" value = ""></textarea>
-					<textarea id="skeleton" placeholder="Skeleton:" rows="4" value = ""></textarea>
+					<textarea id="scrambInput" placeholder="Scramble:" rows="2" value = ""></textarea>
+					<textarea id="moveInput" placeholder="Moves:" rows="8" value = ""></textarea>
+					<textarea id="skeleton" placeholder="Skeleton:" rows="3" value = ""></textarea>
+					<textarea id="insertions" placeholder="Insertions:" rows="4" value = ""></textarea>
 
 					<br>
 					<button id="invertSelection">Invert Selected Moves</button>
@@ -78,7 +79,7 @@ If you think you could help with this, please email me at niczippy77@gmail.com
 			
 				<div class="padded">
 					<p class="spacey">
-					Based on: <a href="https://github.com/cubing/twisty.js">cubing/twisty.js</a>
+					Based on: <a href="https://cubing.net/twisty.js/">cubing.net/twisty.js</a>
 					<br>
 					Modifications by: <a href="https://www.nicbudd.com">Nicbudd</a>
 					<br> 
